# f1c200s-experiments

./: CMakeLists.txt  F1C200S_DRAM.ld  arm-gcc-toolchain.cmake  main.c
f1c200s/: CMakeLists.txt  f1c200s.h
f1c200s/ccu/: ccu.c  ccu.h
f1c200s/display/: display.c  display.h
f1c200s/dram/: dram.c  dram.h
f1c200s/gpio/: gpio.c  gpio.h
f1c200s/uart/: uart.c  uart.h
utils/: printf.c
